# stack-fastapi

./: .commitlintrc.yaml  .dockerignore  .env.example  .gitignore  .gitmessage  .shellcheckrc  .spectral.yaml  .yamllint.yaml  Dockerfile  Makefile  README.md  compose.override.yaml  compose.yaml  openapi.yaml  prek.toml  pyproject.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  prek-autoupdate.yml  smoke-postdeploy.yml
.trunk/: .gitignore  trunk.yaml
docs/adr/: 001-adopt-python-as-language.md  002-adopt-uv-as-toolchain.md  003-adopt-fastapi-as-http-framework.md  004-adopt-openapi-as-api-contract.md  005-adopt-madr-for-architectural-decisions.md  006-adopt-bdr-for-behavior-records.md  007-adopt-conventional-commits.md  008-adopt-tdd-cycle.md  009-adopt-unit-testing-discipline.md  010-adopt-integration-testing-discipline.md  011-adopt-property-based-testing.md  012-adopt-trunk-code-quality.md  013-adopt-sbom-for-released-artifacts.md  014-adopt-dependency-management-policy.md  015-adopt-docker-as-image-format.md  016-adopt-docker-compose-for-local-and-single-host.md  017-adopt-pdoc-for-api-reference-docs.md  018-adopt-prek-as-hook-runner.md  019-adopt-smoke-testing-as-pipeline-gate.md  020-adopt-opentelemetry-for-instrumentation.md  021-adopt-openobserve-as-otlp-backend.md  022-adopt-renovate-config.md  README.md
docs/bdr/: 000-template.md  001-greeting-endpoint.md  README.md
docs/dependencies/: renovate.md
docs/observability/: README.md
docs/sop/: README.md  (+1 more)
secrets/: README.md
tests/: conftest.py
verify/: README.md  adr-001-python.sh  adr-002-uv.sh  adr-003-fastapi.sh  adr-004-openapi.sh  adr-005-madr.sh  adr-006-bdr.sh  adr-007-conventional-commits.sh  adr-008-tdd.sh  adr-009-unit-testing.sh  adr-010-integration-testing.sh  adr-011-property-based-testing.sh  adr-012-trunk.sh  adr-013-sbom.sh  adr-014-dependency-management.sh  adr-015-docker.sh  adr-016-docker-compose.sh  adr-017-pdoc.sh  adr-018-prek.sh  adr-019-smoke-testing.sh  adr-020-opentelemetry.sh  adr-021-openobserve.sh  adr-022-renovate.sh  lib.sh  verify-all.sh
(+41 files in other folders)
