[project]
name = "app"
version = "0.1.0"
description = "python-uv stack reference service implementing ADR-001..017"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "python-uv stack" }]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
]

[dependency-groups]
dev = [
    "ruff==0.8.4",
    "mypy==1.13.0",
]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "hypothesis==6.122.3",
    "testcontainers[postgres]==4.9.0",
    "psycopg[binary]==3.2.3",
]
docs = [
    "pdoc==15.0.1",
]
release = [
    "cyclonedx-bom==5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "D",
]
ignore = [
    "D100",
    "D104",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration test that touches a real out-of-process dependency (deselect with '-m \"not integration\"')",
    "property: Hypothesis-driven property-based test",
]

[tool.coverage.run]
source = ["src/app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
